Added botton nav

--- a/about-me.html
+++ b/about-me.html
@@ -18,18 +18,18 @@
         <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 class="header-title">ABOUT ME</h1>
+                    <h1 class="header-title">About Me</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">HOME</a>
-                    <a href="about-me.html">ABOUT ME</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="blog.html">BLOG</a>
-                    <a href="bio.html">BIO</a>
-                    <a href="contact-me.html">CONTACT ME</a>
+                    <a href="index.html">Home</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="contact-me.html">Contact Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
-                    <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
+                    <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <img src="img/full-stack-development.jpg" alt="">
+                        <img src="img/full-stack-development.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="d-flex">
                         <div class="col-md-2">
-                            <h2 class="login">USER NAME</h2>
+                            <h2 class="login">User Name</h2>
                         </div>
                         <div id="sect-03-cont-login-button" class="login-button col-md-10">
                             <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
@@ -75,7 +75,7 @@
                     <div class="section-03-cont-block">
                       <div class="sect-03-cont-article">
                         <div>
-                          <h3 class="sect-03-about-me">ABOUT ME</h3>
+                          <h3 class="sect-03-about-me">About Me</h3>
                         </div>
                       </div>
                       <div>
@@ -117,6 +117,32 @@
         </section>
 
         <!-- End Login Section New -->
+
+        <!-- Bottom Navigation -->
+        <nav class="bottom-nav">
+            <div class="container">
+                <div class="row">
+                    <div id="bottom-nav-sect" class="col">
+                        <ul class="bottom-nav-list d-flex justify-content-md-between">
+                            <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- End Bottom Navigation -->
 
         <!-- Horizontal Line -->
         <section class="section-3b">
