--- a/blog.html
+++ b/blog.html
@@ -18,18 +18,18 @@
         <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 class="header-title">MY BLOG</h1>
+                    <h1 class="header-title">My Blog</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">HOME</a>
-                    <a href="about-me.html">ABOUT ME</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="blog.html">BLOG</a>
-                    <a href="bio.html">BIO</a>
-                    <a href="contact-me.html">CONTACT ME</a>
+                    <a href="index.html">Home</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="contact-me.html">Contact Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
-                    <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
+                    <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <img src="img/full-stack-dev-2.jpg" alt="">
+                        <img src="img/full-stack-dev-2.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -63,14 +63,14 @@
             <div id="sect-03-cont" class="container-fluid">
                 <div class="row">
                     <div id="sect-03-user-box" class="col-md-4">
-                        <h2 class="login">USER NAME</h2>
+                        <h2 class="login">User Name</h2>
                         <div id="sect-03-cont-login-button" class="login-button">
                             <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div id="sect-03-blog-div">
-                            <h3 class="sect-03-about-me"><img src="img/bootstrap.svg" alt="Bootstrap" width="42" height="42">BLOG</h3>
+                            <h3 class="sect-03-about-me"><img src="img/bootstrap.svg" alt="Bootstrap" width="42" height="42">Blog</h3>
                             <h4>Mississippi Full Stack Developer</h4>
                             <div id="sect-03-cont-new-post-button" class="login-button">
                                 <button type="button" class="btn btn-dark"><a href="#">+ New POST</a></button>
@@ -199,6 +199,32 @@
                 </div>
             </div>
         </section>
+
+        <!-- Bottom Navigation -->
+        <nav class="bottom-nav">
+            <div class="container">
+                <div class="row">
+                    <div id="bottom-nav-sect" class="col">
+                        <ul class="bottom-nav-list d-flex justify-content-md-between">
+                            <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
+                            <li class="bottom-nav-list-items-vslash">|</li>
+                            <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
+                            <li class="bottom-nav-list-items|">|</li>
+                            <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="bottom-nav-list-items|">|</li>
+                            <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
+                            <li class="bottom-nav-list-items|">|</li>
+                            <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
+                            <li class="bottom-nav-list-items|">|</li>
+                            <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
+                            <li class="bottom-nav-list-items|">|</li>
+                            <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- End Bottom Navigation -->
 
         <!-- Horizontal Line -->
         <section class="section-3b">
