--- a/contact-me.html
+++ b/contact-me.html
@@ -18,18 +18,18 @@
         <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 class="header-title">CONTACT ME</h1>
+                    <h1 class="header-title">Contact Me</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">HOME</a>
-                    <a href="about-me.html">ABOUT ME</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="blog.html">BLOG</a>
-                    <a href="bio.html">BIO</a>
-                    <a href="contact-me.html">CONTACT ME</a>
+                    <a href="index.html">Home</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="contact-me.html">Contact Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
-                    <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
+                    <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                     <form>
                         <div class="col">
                             <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                                <label for="exampleFormControlInput1" class="form-label">Email address:</label>
                                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" class="col-md-4">
                             </div>
                             <div class="mb-3">
@@ -102,6 +102,32 @@
                 
             </div>
         </section>
+
+        <!-- Bottom Navigation -->
+        <nav class="bottom-nav">
+            <div class="container">
+                <div class="row">
+                    <div id="bottom-nav-sect" class="col">
+                        <ul class="bottom-nav-list d-flex justify-content-md-between">
+                            <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- End Bottom Navigation -->
 
         <!-- Horizontal Line -->
         <section class="section-3b">
