--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4 header-title">
-                    <h1>PORTFOLIO HOME</h1>
+                    <h1>Portfolio Home</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">HOME</a>
-                    <a href="about-me.html">ABOUT ME</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="blog.html">BLOG</a>
-                    <a href="bio.html">BIO</a>
-                    <a href="contact-me.html">CONTACT ME</a>
+                    <a href="index.html">Home</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="contact-me.html">Contact Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
-                    <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
+                    <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
                 </div>
             </div>
         </div>
@@ -117,7 +117,56 @@
         </section>
 
         <!-- Horizontal Line -->
+        <!-- <section class="section-nav-line">
+            <div id="horizontal-line-nav" class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+        
+        <!-- Horizontal Line -->
         <section class="section-3b">
+            <div id="horizontal-line2" class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Bottom Navigation -->
+        <nav class="bottom-nav">
+            <div class="container">
+                <div class="row">
+                    <div id="bottom-nav-sect" class="col">
+                        <ul class="bottom-nav-list d-flex justify-content-md-between">
+                            <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
+                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- End Bottom Navigation -->
+
+        <!-- Horizontal Line -->
+        <section class="section-3bc">
             <div id="horizontal-line2" class="container-fluid">
                 <div class="row">
                     <div class="col">
@@ -162,7 +211,7 @@
 
                 </div>
                 <div id="copyright" class="col-md-7">
-                    <h5>MY PORTFOLIO &copy; COPYRIGHT 2022: DEVELOPER : VERIES SEALS III</h5>
+                    <h5>My Portfolio &copy; Copyright 2022: Developer : Veries Seals III</h5>
                 </div>
             </div>
         </div>
