Adjusting responsivness for mobile

--- a/sign-up.html
+++ b/sign-up.html
@@ -197,17 +197,17 @@
                   <div id="bottom-nav-sect" class="col">
                       <ul class="bottom-nav-list d-flex justify-content-md-between">
                           <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
-                          <li class="bottom-nav-list-items">|</li>
+                          <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                           <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
                       </ul>
                   </div>
