--- a/about-me.html
+++ b/about-me.html
@@ -26,7 +26,8 @@
                     <a href="portfolio.html">Portfolio</a>
                     <a href="blog.html">Blog</a>
                     <a href="bio.html">Bio</a>
-                    <a href="contact-me.html">Contact Me</a>
+                    <a href="whats-on-your-mind.html">What's on your mind?</a>
+                    <a href="mailto:veries@me.com">Email Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
@@ -41,7 +42,7 @@
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <img src="img/full-stack-development.jpg" alt="" class="img-fluid">
+                        <img src="img/full-stack-development.jpg" alt="Full Stack Development Poser" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -125,17 +126,19 @@
                     <div id="bottom-nav-sect" class="col">
                         <ul class="bottom-nav-list d-flex justify-content-md-between">
                             <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
+                            <li class="bottom-nav-list-items"><a href="whats-on-your-mind.html">What's on your mind?</a></li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
                         </ul>
                     </div>
