--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <a href="portfolio.html">Portfolio</a>
                     <a href="blog.html">Blog</a>
                     <a href="bio.html">Bio</a>
-                    <a href="contact-me.html">Contact Me</a>
+                    <a href="whats-on-your-mind.html">What's on your mind?</a>
+                    <a href="mailto:veries@me.com">Email Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
@@ -40,17 +41,17 @@
         <section class="section-2">
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col">
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide1.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide1.jpg" class="d-block w-100" alt="Figma Concept Design">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide2.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide2.jpg" class="d-block w-100" alt="Vinnies Pizzeria">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide3.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide3.jpg" class="d-block w-100" alt="Xbox Series X Fan Page">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -107,27 +108,15 @@
                         </form>
                     </div>
                     <div id="sect-03-cont-img1" class="col-md-4">
-                        <img src="img/squares.png" alt="" class="img-fluid">
+                        <img src="img/squares.png" alt="Color Squares" class="img-fluid">
                     </div>
                     <div id="sect-03-cont-img2" class="col-md-4">
-                        <img src="img/me.png" alt="" class="img-fluid">
+                        <img src="img/me.png" alt="My Profile Picture" class="img-fluid">
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Horizontal Line -->
-        <!-- <section class="section-nav-line">
-            <div id="horizontal-line-nav" class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <hr>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        
         <!-- Horizontal Line -->
         <section class="section-3b">
             <div id="horizontal-line2" class="container-fluid">
@@ -146,17 +135,19 @@
                     <div id="bottom-nav-sect" class="col">
                         <ul class="bottom-nav-list d-flex justify-content-md-between">
                             <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
+                            <li class="bottom-nav-list-items"><a href="whats-on-your-mind.html">What's on your mind?</a></li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
                         </ul>
                     </div>
