--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,8 @@
                     <a href="portfolio.html">Portfolio</a>
                     <a href="blog.html">Blog</a>
                     <a href="bio.html">Bio</a>
-                    <a href="contact-me.html">Contact Me</a>
+                    <a href="whats-on-your-mind.html">What's on your mind?</a>
+                    <a href="mailto:veries@me.com">Email Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
@@ -40,17 +41,17 @@
         <section class="section-2">
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col">
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide7.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide7.jpg" class="d-block w-100" alt="Fake Blog Page and Code">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide8.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide8.jpg" class="d-block w-100" alt="Books and Authors Python Project and Code">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide9.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide9.jpg" class="d-block w-100" alt="Survey Python Project and Code">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -143,7 +144,7 @@
                 <div class="row">
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/detroix-sm.png" class="card-img-top" alt="...">
+                            <img src="img/detroix-sm.png" class="card-img-top" alt="Detroix Preview Picture">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Detroix Project</h5>
                               <p class="card-text">HTML and CSS project excersize. Also bootstrap was used for fluid design.</p>
@@ -155,7 +156,7 @@
                     </div>
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/online-pizza-store-sm.png" class="card-img-top" alt="...">
+                            <img src="img/online-pizza-store-sm.png" class="card-img-top" alt="Online Pizza Store Preview Picture">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Online Pizza Store</h5>
                               <p class="card-text">One of our projects was the Online Pizz Store. I used HTML, CSS and Bootstrap. </p>
@@ -167,7 +168,7 @@
                     </div>
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/xbox-fan-page.png" class="card-img-top" alt="...">
+                            <img src="img/xbox-fan-page.png" class="card-img-top" alt="Xbox Fan Page Preview Image">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Xbox Fan Page</h5>
                               <p class="card-text">The Xbox Fan Page was built with HTML, CSS and Bootstrap. Check it out!</p>
@@ -188,7 +189,7 @@
                 <div class="row">
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/modernized-sm.png" class="card-img-top" alt="...">
+                            <img src="img/modernized-sm.png" class="card-img-top" alt="Modernized Web Page Preview Image">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Modernized</h5>
                               <p class="card-text">Modernized is one of my older HTML static page projects. Feel free to check it out.</p>
@@ -200,7 +201,7 @@
                     </div>
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/restaurant-sm.png" class="card-img-top" alt="...">
+                            <img src="img/restaurant-sm.png" class="card-img-top" alt="Online Pizza Store Preview Image">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Online Pizza Store</h5>
                               <p class="card-text">Restaurant design with HTML, CSS and Bootstrap. A dive into Responsive Web Design.</p>
@@ -212,7 +213,7 @@
                     </div>
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
-                            <img src="img/vendor-sm.png" class="card-img-top" alt="...">
+                            <img src="img/venedor-sm.png" class="card-img-top" alt="Venedor Website Preview Image">
                             <div class="card-body git-card-combo">
                               <h5 class="card-title">Venedor</h5>
                               <p class="card-text">I had lots of fun working on the Venedor concept project. Click below to see it!</p>
@@ -235,17 +236,19 @@
                 <div id="bottom-nav-sect" class="col">
                     <ul class="bottom-nav-list d-flex justify-content-md-between">
                         <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
+                        <li class="bottom-nav-list-items"><a href="whats-on-your-mind.html">What's on your mind?</a></li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
-                        <li class="bottom-nav-list-items">|</li>
+                        <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                         <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
                     </ul>
                 </div>
