--- a/whats-on-your-mind.html
+++ b/whats-on-your-mind.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Contact Me</title>
+    <title>What's on your Mind</title>
 </head>
 <body>
     <!-- Header -->
@@ -18,7 +18,7 @@
         <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 class="header-title">Contact Me</h1>
+                    <h1 class="header-title">Whats on your mind?</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
                     <a href="index.html">Home</a>
@@ -26,7 +26,8 @@
                     <a href="portfolio.html">Portfolio</a>
                     <a href="blog.html">Blog</a>
                     <a href="bio.html">Bio</a>
-                    <a href="contact-me.html">Contact Me</a>
+                    <a href="whats-on-your-mind.html">What's on your mind?</a>
+                    <a href="mailto:veries@me.com">Email Me</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">Sign Up</a></button>
@@ -44,13 +45,13 @@
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide3.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide3.jpg" class="d-block w-100" alt="Xbox Fan Page with code">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide6.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide6.jpg" class="d-block w-100" alt="Modernized Project with code">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide9.jpg" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide9.jpg" class="d-block w-100" alt="Dojo Survey Python Project with code">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -82,7 +83,7 @@
         <section class="section-3">
             <div id="sect-03-cont" class="container-fluid">
                 <div class="row">
-                    <form>
+                    <form class="whats-on">
                         <div class="col">
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">Email address:</label>
@@ -110,17 +111,19 @@
                     <div id="bottom-nav-sect" class="col">
                         <ul class="bottom-nav-list d-flex justify-content-md-between">
                             <li class="bottom-nav-list-items"><a href="index.html">Home</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="about-me.html">About Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="portfolio.html">Portfolio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="blog.html">Blog</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="bio.html">Bio</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
+                            <li class="bottom-nav-list-items"><a href="whats-on-your-mind.html">What's on your mind?</a></li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="mailto:veries@me.com">Email Me</a></li>
-                            <li class="bottom-nav-list-items">|</li>
+                            <li class="bottom-nav-list-items d-flex d-none d-md-block">|</li>
                             <li class="bottom-nav-list-items"><a href="sign-up.html">Sign Up</a></li>
                         </ul>
                     </div>
