Corrected top navbar with bootstrap code

--- a/sign-up.html
+++ b/sign-up.html
@@ -20,13 +20,18 @@
                 <div class="col-md-4">
                     <h1 class="header-title">Sign-Up</h1>
                 </div>
-                <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">Home</a>
-                    <a href="about-me.html">About Me</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="bio.html">Bio</a>
-                    <a href="contact-me.html">Contact Me</a>
+                <div id="sect-01-top-nav" class="col-md-6">
+                    
+                  <nav class="nav justify-content-md-between d-none d-lg-flex">
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="about-me.html" class="nav-link">About Me</a>
+                    <a href="portfolio.html" class="nav-link">Portfolio</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
+                    <a href="bio.html" class="nav-link">Bio</a>
+                    <a href="whats-on-your-mind.html" class="nav-link">What's on your mind?</a>
+                    <a href="mailto:veries@me.com" class="nav-link">Email Me</a>
+                  </nav>
+
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
