--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
                                 <a class="nav-link" href="about-me.html">About Me</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+                                <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Blog</a>
+                                <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Bio</a>
+                                <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">What's on your mind?</a>
+                                <a class="nav-link active" aria-current="page" href="whats-on-your-mind.html">What's on your mind?</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="mailto:veries@me.com">Email Me!</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="sign-up.html">Sign-Up</a>
                               </li>
                               
                         
