--- a/about-me.html
+++ b/about-me.html
@@ -21,7 +21,7 @@
                   <!-- New Hamburger Menu -->
                   <nav class="navbar navbar-expand-lg bg-dark">
                       <div class="container-fluid">
-                        <h4 class="navbar-brand">About Me</h4>
+                        <h4 id="noHover" class="navbar-brand">About Me</h4>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
