Some HTML and CSS corrections.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
         </section>
 
-        <!-- Horizontal Line -->
+        <!-- Horizontal Line 2-->
         <section class="section-3b">
             <div id="horizontal-line2" class="container-fluid">
                 <div class="row">
@@ -182,9 +182,9 @@
         </nav>
         <!-- End Bottom Navigation -->
 
-        <!-- Horizontal Line -->
+        <!-- Horizontal Line 3-->
         <section class="section-3bc">
-            <div id="horizontal-line2" class="container-fluid">
+            <div id="horizontal-line3" class="container-fluid ">
                 <div class="row">
                     <div class="col">
                         <hr>
