--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <!-- Horizontal Line -->
+        <!-- Horizontal Line 2-->
         <section class="section-2b">
             <div id="horizontal-line1" class="container-fluid">
                 <div class="row">
@@ -140,7 +140,7 @@
                                       </svg><a href="#"> Reading List</a></li>
                                 </ul>
                                 <!-- End of Blog List -->
-                                <div id="article-line1">
+                                <div class="article-line1">
                                     <hr>
                                 </div>
                                 <ul>
@@ -165,16 +165,16 @@
                                     <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
                                   </svg>
                             </div>
-                            <div id="article-line1">
+                            <div class="article-line1">
                                 <hr>
                             </div>
                         </div>
                         <div id="blog-items-right" class="col">
                             <p>
                                 This is my first blog post in the blogging world! As a Full Stack Development Student, I would like to greet everyone by saying "Hello World!"
-                            <p/>
+                            </p>
                         </div>
-                        <div id="article-line1">
+                        <div class="article-line1">
                             <hr>
                         </div>
                         <div class="row">
@@ -188,7 +188,7 @@
                                   </svg><a href="#">MANAGE</a></p>
                             </div>
                         </div>
-                        <div id="article-line1">
+                        <div class="article-line1">
                             <hr>
                         </div>
                         <div id="blog-cont" class="blog-post">
@@ -254,9 +254,9 @@
         </nav>
         <!-- End Bottom Navigation -->
 
-        <!-- Horizontal Line -->
-        <section class="section-3b">
-            <div id="horizontal-line2" class="container-fluid">
+        <!-- Horizontal Line 3-->
+        <section class="section-3bc">
+            <div id="horizontal-line3" class="container-fluid ">
                 <div class="row">
                     <div class="col">
                         <hr>
@@ -290,7 +290,7 @@
                     <a href="https://www.microsoft.com/en-us/?ql=3" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-microsoft" viewBox="0 0 16 16">
                         <path d="M7.462 0H0v7.19h7.462V0zM16 0H8.538v7.19H16V0zM7.462 8.211H0V16h7.462V8.211zm8.538 0H8.538V16H16V8.211z"/>
                       </svg></a>
-                      <a href="https://www.apple.com/"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 16">
+                      <a href="https://www.apple.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 16">
                         <path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
                         <path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
                       </svg></a>
