--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <!-- Horizontal Line -->
+        <!-- Horizontal Line 2-->
         <section class="section-2b">
             <div id="horizontal-line1" class="container-fluid">
                 <div class="row">
@@ -150,8 +150,7 @@
                             <div id="bio-paragraph2" class="col">
                                 <p>
                                   I still feel I have a lot to learn, but I am proud of the body of work that I have produced. I can see the fruits of my labor. I hope that as you browse my portfolio you can also see my effort and appreciate my work at the same time.
-                                <p/>
-                                
+                                </p>
                             </div>
                         </div>
                       </div>
@@ -160,8 +159,6 @@
                 </div>
             </div>
         </section>
-
-        
 
         <!-- Portfolio Cards -->
         <section class="section2a">
@@ -210,7 +207,7 @@
 
       <!--  -->
       <section class="section2a">
-            <div id="section-02a-cont-top" class="container-fluid">
+            <div id="section-02a-cont-top1" class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 section-02a-cont-top-set1">
                         <div class="card" style="width: 18rem;">
@@ -282,16 +279,16 @@
     </nav>
     <!-- End Bottom Navigation -->
 
-        <!-- Horizontal Line -->
-        <section class="section-3b">
-            <div id="horizontal-line2" class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <hr>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!-- Horizontal Line 3-->
+        <section class="section-3bc">
+          <div id="horizontal-line3" class="container-fluid ">
+              <div class="row">
+                  <div class="col">
+                      <hr>
+                  </div>
+              </div>
+          </div>
+      </section>
 
   </main>
 
@@ -318,7 +315,7 @@
                 <a href="https://www.microsoft.com/en-us/?ql=3" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-microsoft" viewBox="0 0 16 16">
                     <path d="M7.462 0H0v7.19h7.462V0zM16 0H8.538v7.19H16V0zM7.462 8.211H0V16h7.462V8.211zm8.538 0H8.538V16H16V8.211z"/>
                   </svg></a>
-                  <a href="https://www.apple.com/"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 16">
+                  <a href="https://www.apple.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-apple" viewBox="0 0 16 16">
                     <path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
                     <path d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43Zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282Z"/>
                   </svg></a>
