removed link from button html

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                         <h2 class="login">User Name</h2>
                     </div>
                     <div id="sect-03-cont-login-button" class="login-button col-md-10">
-                        <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
+                        <button type="button" class="btn btn-dark">Logout</button>
                     </div>
                   </div>
 
